Configuration + Performances corrections

--- a/src/main/resources/caesar.properties
+++ b/src/main/resources/caesar.properties
@@ -14,5 +14,9 @@ caesar.version=${project.version}
 # Caesar Mode
 paris.pythia_mode=true
 
+
+# Workspace
+workspace.configuration.file=caesar.json
+
 #Demeter
 demeter.level.tags=$l_
