New extension + Transaction Classifier

--- a/src/main/resources/default_configuration.json
+++ b/src/main/resources/default_configuration.json
@@ -9,5 +9,8 @@
   "SIMILARITY_LINK": "SIMILARITY",
   "COMMUNITY": "COMMUNITY",
   "TRANSACTION_COMMUNITY": "COMMUNITY_TRANSACTION",
-  "WEIGHT_PROPERTY": "WEIGHT"
+  "WEIGHT_PROPERTY": "WEIGHT",
+
+
+  "PROPAGATION_CONSIDER_INHERIT" : true
 }
