--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.castsoftware</groupId>
     <artifactId>Caesar</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.5</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -46,7 +46,17 @@
             <version>1.1.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>4.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>4.3.2</version>
+            <classifier>models</classifier>
+        </dependency>
 
     </dependencies>
 
